--- a/src/sass/components/layouts/_searchbar.scss
+++ b/src/sass/components/layouts/_searchbar.scss
@@ -26,13 +26,13 @@
     .searchbar {
         width: 100%;
         .searchbar-section {
-            padding: 0 15%;
+            padding: 0 10%;
             display: flex;
             flex-direction: row;
             color: $base-color;
 
             &-left {
-                width: 53%;
+                width: 48%;
                 h1 {
                     font-family: Nunito-Bold;
                     font-size: 28px;
@@ -52,7 +52,8 @@
                         #outlined-basic {
                             background-color: #384170;
                             border-radius: 3px;
-                            width: 240px;
+                            // width: 240px;
+                            width: 15rem;
                             color: $base-color;
                         }
 
@@ -73,7 +74,8 @@
                 &-illustration {
                     z-index: 0 !important;
                     position: absolute;
-                    width: 40rem;
+                    // width: 40rem;
+                    width: 40%;
                     top: 7em;
                     right: 8em;
                 }
