--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -71,3 +71,4 @@ $base-color: #e9e9e9;
 $dark-primary-color: #384170;
 $primary-color: #424d83;
 $secondary-color: #a1b0fc;
+$light-secondary-color: #f7f8ff;
