--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,5 @@
 // @import "sass/components/banners/home-banner";
 
 // MODULES
-// @import "sass/components/modules/home-body";
-// @import "sass/components/modules/burger-menu";
-// @import "sass/components/modules/about-me-tabs";
+@import "swiper/swiper-bundle.min.css";
+@import "swiper/swiper.min.css";
