--- a/src/sass/components/pages/home/_dont-know.scss
+++ b/src/sass/components/pages/home/_dont-know.scss
@@ -71,7 +71,8 @@
                 }
                 &-bottom {
                     height: 50%;
-                    color: $base-color;
+                    // color: $base-color;
+                    color: white;
                     display: flex;
                     flex-direction: column;
                     // justify-content: flex-end;
