--- a/src/sass/components/pages/home/_hosting-types.scss
+++ b/src/sass/components/pages/home/_hosting-types.scss
@@ -14,4 +14,77 @@
 @include breakpoint(tablet) {
 }
 @include breakpoint(laptops) {
+    .hostingTypes-section {
+        padding: 5% 10%;
+        &-title {
+            align-self: center;
+            h1 {
+                font-family: Nunito-Bold;
+                font-size: 24px;
+                margin-bottom: 5px;
+                text-align: center;
+            }
+            p {
+                font-family: Nunito-Regular;
+                font-size: 16px;
+                text-align: center;
+            }
+        }
+        &-bottom {
+            display: flex;
+            justify-content: space-around;
+            &-card {
+                margin-top: 50px;
+                border-radius: 5px;
+                padding: 2em;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                // height: 35rem;
+                height: 25rem;
+                box-shadow: 1px 5px 20px 1px rgba(0, 0, 0, 0.45);
+                -webkit-box-shadow: 1px 5px 20px 1px rgba(0, 0, 0, 0.45);
+                -moz-box-shadow: 1px 5px 20px 1px rgba(0, 0, 0, 0.45);
+                img {
+                    height: 45px;
+                    width: 50px;
+                    align-self: center;
+                    margin: 20px;
+                }
+                h3 {
+                    font-family: Nunito-Bold;
+                    font-size: 16px;
+                    margin-bottom: 5px;
+                    text-align: center;
+                    margin: 20px;
+                }
+                p {
+                    font-family: Nunito-Regular;
+                    font-size: 14px;
+                    text-align: center;
+                    margin: 20px;
+                }
+                hr {
+                    width: 100%;
+                    position: relative;
+                }
+                span {
+                    margin-left: 25px;
+                    align-self: center;
+                    display: flex;
+                    align-items: baseline;
+                    font-size: 24px;
+                    text-align: center;
+                    p {
+                        font-size: 12px;
+                        text-align: start;
+                        margin-left: 1px;
+                    }
+                }
+            }
+            &-card:hover {
+                border-radius: 30px;
+            }
+        }
+    }
 }
