--- a/src/sass/components/pages/home/_our-clients.scss
+++ b/src/sass/components/pages/home/_our-clients.scss
@@ -14,4 +14,37 @@
 @include breakpoint(tablet) {
 }
 @include breakpoint(laptops) {
+    .ourClients-section {
+        margin: 150px 0;
+        padding: 0 10%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        &-title {
+            align-self: center;
+            h1 {
+                font-family: Nunito-Bold;
+                font-size: 24px;
+                margin-bottom: 5px;
+                text-align: center;
+            }
+            p {
+                font-family: Nunito-Regular;
+                font-size: 16px;
+                text-align: center;
+            }
+        }
+        &-clients {
+            margin: 50px;
+            align-self: center;
+            img {
+                height: 30px;
+                padding: 0 20px;
+            }
+        }
+        button {
+            align-self: center;
+            width: 150px;
+        }
+    }
 }
