--- a/src/sass/components/layouts/_header.scss
+++ b/src/sass/components/layouts/_header.scss
@@ -41,7 +41,8 @@
             // padding: 0 5%;
             .header-title {
                 position: relative;
-                top: -45px;
+                // top: -45px;
+                top: -25px;
                 &-logo {
                     img {
                         height: 20px;
@@ -75,7 +76,8 @@
                 &-title:hover {
                     background-clip: border-box;
                     background-color: $secondary-color;
-                    padding: 70px 0 60px 0;
+                    // padding: 70px 0 60px 0;
+                    padding: 70px 0 80px 0;
                     border-radius: 0 0 5px 5px;
                 }
 
@@ -83,7 +85,8 @@
                     font-size: 12px;
                     margin-left: 30px;
                     position: relative;
-                    top: 50px;
+                    // top: 50px;
+                    top: 70px;
                 }
             }
         }
