--- a/src/sass/components/layouts/_footer.scss
+++ b/src/sass/components/layouts/_footer.scss
@@ -30,12 +30,84 @@
 }
 
 @include breakpoint(mobile) {
-    .header-section {
-        .header-title {
+    .footer-section {
+        margin-bottom: -200px;
+        // background-color: $primary-color;
+        background-image: url(../../../assets/images/footer.png);
+        background-repeat: no-repeat;
+        background-size: 100% 400px;
+        // height: 150px;
+        // padding-top: -200px;
+        width: 100%;
+        .footer-content-top {
             display: none;
         }
-        .header-container {
-            display: none;
+
+        .footer-content-bottom {
+            // display: none;
+            display: flex;
+            flex-direction: column;
+            align-items: baseline;
+            justify-content: center;
+            // position: relative;
+            // bottom: -120px;
+            padding: 25% 10% 8% 10%;
+            .footer-left-bottom {
+                align-self: center;
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 50px;
+                img {
+                    height: 30px;
+                }
+                p {
+                    margin-left: 20px;
+                    color: $base-color;
+                    font-family: Nunito-Regular;
+                    font-size: 14px;
+                }
+            }
+            .footer-right-bottom {
+                align-self: center;
+                &-socmed {
+                    display: flex;
+                    flex-direction: column;
+                    // justify-content: center;
+
+                    ul {
+                        display: flex;
+                        justify-content: center;
+                        li {
+                            list-style: none;
+                            margin-left: 10px;
+                            a {
+                                img {
+                                    height: 15px;
+                                }
+                            }
+                        }
+                    }
+                    span {
+                        display: flex;
+                        justify-content: flex-end;
+                        align-items: baseline;
+                        a {
+                            color: $base-color;
+                            font-family: Nunito-Regular;
+                            font-size: 14px;
+                            text-decoration: none;
+                            margin-left: 10px;
+                        }
+                        p {
+                            margin-top: 15px;
+                            margin-left: 10px;
+                            color: $base-color;
+                            font-family: Nunito-Regular;
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
         }
     }
 }
