--- a/src/sass/components/pages/home/_our-clients.scss
+++ b/src/sass/components/pages/home/_our-clients.scss
@@ -10,6 +10,51 @@
 }
 
 @include breakpoint(mobile) {
+    .ourClients-section {
+        margin: 80px 0;
+        padding: 0 10%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        &-title {
+            align-self: center;
+            h1 {
+                font-family: Nunito-Bold;
+                font-size: 24px;
+                margin-bottom: 5px;
+                text-align: center;
+            }
+            p {
+                font-family: Nunito-Regular;
+                font-size: 16px;
+                text-align: center;
+            }
+        }
+        &-clients {
+            margin: 30px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            // img {
+            //     margin: 20px;
+            //     // padding: 20px 0;
+            // }
+            :nth-child(odd) {
+                margin: 20px;
+                height: 30px;
+                align-self: flex-start;
+            }
+            :nth-child(even) {
+                margin: 20px 0;
+                height: 30px;
+                align-self: flex-end;
+            }
+        }
+        button {
+            align-self: center;
+            width: 150px;
+        }
+    }
 }
 @include breakpoint(tablet) {
 }
