--- a/src/sass/components/layouts/_header.scss
+++ b/src/sass/components/layouts/_header.scss
@@ -11,11 +11,80 @@
 
 @include breakpoint(mobile) {
     .header-section {
-        .header-title {
-            display: none;
+        width: 100%;
+        // padding: 0 5%;
+        &-heroBG {
+            position: absolute;
+            top: -220px;
+            z-index: -1 !important;
+            height: 50em;
+            object-fit: cover;
+            width: 100%;
         }
-        .header-container {
-            display: none;
+
+        .header {
+            @include row();
+            justify-content: space-around;
+            // position: relative;
+            // width: 100%;
+            padding: 0 5%;
+            &-burger {
+                margin-right: -30px;
+                z-index: 3;
+            }
+            &-burgerOpen {
+                z-index: 2;
+                position: absolute;
+                background-color: $secondary-color;
+                width: 100%;
+                // height: 100%;
+                padding: 50px;
+                border-radius: 0 0 25px 25px;
+                ul {
+                    height: 500px;
+                    padding-top: 300px;
+                    // padding-bottom: 50px;
+                    li {
+                        list-style: none;
+                        padding: 10px 0;
+                        a {
+                            color: white;
+                            font-family: Nunito-Bold;
+                            font-size: 16px;
+                            text-decoration: none;
+                        }
+                    }
+                    li:nth-child(3) {
+                        margin-bottom: 20px;
+                    }
+                }
+                hr {
+                    height: 1px;
+                    background-color: $base-color;
+                    border: none;
+                }
+                p {
+                    margin-top: 20px;
+                    color: white;
+                    font-family: Nunito-Regular;
+                    font-size: 12px;
+                }
+            }
+            .header-title {
+                position: relative;
+                // top: -45px;
+                left: -10px;
+                // top: -25px;
+                &-logo {
+                    img {
+                        height: 30px;
+                    }
+                }
+            }
+
+            .header-container {
+                display: none;
+            }
         }
     }
 }
@@ -39,6 +108,12 @@
             justify-content: space-around;
             position: relative;
             // padding: 0 5%;
+            &-burger {
+                display: none;
+            }
+            &-burgerOpen {
+                display: none;
+            }
             .header-title {
                 position: relative;
                 // top: -45px;
