--- a/src/sass/components/layouts/_searchbar.scss
+++ b/src/sass/components/layouts/_searchbar.scss
@@ -10,12 +10,69 @@
 }
 
 @include breakpoint(mobile) {
-    .header-section {
-        .header-title {
-            display: none;
-        }
-        .header-container {
-            display: none;
+    .searchbar {
+        // display: none;
+        width: 100%;
+        .searchbar-section {
+            padding: 0 10%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            &-left {
+                // width: 48%;
+                margin-top: 50px;
+                h1 {
+                    font-family: Nunito-Bold;
+                    font-size: 28px;
+                    margin-bottom: 5px;
+                    color: $base-color;
+                    text-align: center;
+                }
+                p {
+                    font-family: Nunito-Regular;
+                    color: $base-color;
+                    font-size: 16px;
+                    margin-bottom: 35px;
+                    margin-top: 20px;
+                    text-align: center;
+                }
+                &-form {
+                    @include row();
+                    // width: 85%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    &-set {
+                        @include row();
+
+                        #outlined-basic {
+                            background-color: #384170;
+                            border-radius: 3px;
+                            // width: 240px;
+                            width: 12rem;
+                            color: $base-color;
+                        }
+
+                        #select-basic {
+                            background-color: #384170;
+                            border-radius: 3px;
+                            margin: 0;
+                        }
+                    }
+                    &-btn {
+                        margin-top: 50px;
+                        z-index: 1;
+                        height: 40px;
+                    }
+                }
+            }
+
+            &-right {
+                &-illustration {
+                    display: none;
+                }
+            }
         }
     }
 }
