--- a/src/sass/components/pages/home/_dont-know.scss
+++ b/src/sass/components/pages/home/_dont-know.scss
@@ -10,6 +10,100 @@
 }
 
 @include breakpoint(mobile) {
+    .dontKnow-section {
+        display: flex;
+        flex-direction: column;
+        background-color: $light-secondary-color;
+        padding: 8% 10%;
+        margin-top: -150px;
+        &-title {
+            align-self: center;
+            h1 {
+                font-family: Nunito-Bold;
+                font-size: 24px;
+                margin-bottom: 5px;
+                text-align: center;
+            }
+            p {
+                font-family: Nunito-Regular;
+                font-size: 16px;
+                text-align: center;
+            }
+        }
+        &-bottom {
+            display: flex;
+            flex-direction: column;
+            // justify-content: space-between;
+            margin-top: 50px;
+
+            &-card {
+                background-color: $secondary-color;
+                border-radius: 5px;
+                padding: 2em;
+                height: 25em;
+                margin: 20px 0;
+                &-top {
+                    // margin-bottom: 50px;
+                    // height: 50%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: flex-start;
+                    &-icon {
+                        background-color: $primary-color;
+                        height: 50px;
+                        width: 50px;
+                        border-radius: 5px;
+                        padding: 10px 15px;
+                        img {
+                            height: 30px;
+                            width: 20px;
+                        }
+                    }
+                    &-accent {
+                        img {
+                            width: 6em;
+                        }
+                    }
+                }
+                &-bottom {
+                    // height: 50%;
+                    margin-top: 50px;
+                    // color: $base-color;
+                    color: white;
+                    display: flex;
+                    flex-direction: column;
+                    // justify-content: flex-end;
+                    h3 {
+                        font-family: Nunito-Bold;
+                        font-size: 16px;
+                        margin-bottom: 5px;
+                        text-align: start;
+                    }
+                    p {
+                        font-family: Nunito-Regular;
+                        font-size: 14px;
+                        text-align: start;
+                    }
+                    &-btn {
+                        margin-top: 15px;
+                        align-self: flex-end;
+                    }
+                }
+            }
+
+            &-card:nth-child(2) {
+                background-color: $primary-color;
+
+                .dontKnow-section-bottom-card-top-icon {
+                    background-color: $secondary-color;
+                    img {
+                        height: 25px;
+                    }
+                }
+            }
+        }
+    }
 }
 @include breakpoint(tablet) {
 }
