--- a/src/sass/components/pages/home/_what-will.scss
+++ b/src/sass/components/pages/home/_what-will.scss
@@ -10,6 +10,67 @@
 }
 
 @include breakpoint(mobile) {
+    .whatWill-section {
+        margin: 150px 0;
+        padding: 0 10%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        &-title {
+            align-self: center;
+            h1 {
+                font-family: Nunito-Bold;
+                font-size: 24px;
+                margin-bottom: 5px;
+                text-align: center;
+            }
+            p {
+                font-family: Nunito-Regular;
+                font-size: 16px;
+                text-align: center;
+            }
+        }
+
+        &-bottom {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            margin-top: 100px;
+            &-left {
+                // width: 50%;
+                ul {
+                    li {
+                        list-style: none;
+                        display: flex;
+                        justify-content: flex-start;
+                        margin-bottom: 60px;
+                        img {
+                            height: 55px;
+                            margin-right: 30px;
+                        }
+                        .desc {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: flex-start;
+                            h3 {
+                                font-family: Nunito-Bold;
+                                font-size: 16px;
+                                margin-bottom: 15px;
+                            }
+                            p {
+                                font-family: Nunito-Regular;
+                                font-size: 14px;
+                            }
+                        }
+                    }
+                }
+            }
+            &-right {
+                display: none;
+            }
+        }
+    }
 }
 @include breakpoint(tablet) {
 }
