--- a/src/sass/components/layouts/_header.scss
+++ b/src/sass/components/layouts/_header.scss
@@ -89,6 +89,82 @@
     }
 }
 @include breakpoint(tablet) {
+    // .header-section {
+    //     width: 100%;
+    //     // margin-left: 10%;
+    //     // padding: 0 10%;
+    //     &-heroBG {
+    //         position: absolute;
+    //         top: -220px;
+    //         z-index: -1 !important;
+    //         height: 50em;
+    //         object-fit: cover;
+    //         width: 100%;
+    //     }
+
+    //     .header {
+    //         @include row();
+    //         justify-content: space-around;
+    //         position: relative;
+    //         padding: 0 10%;
+    //         &-burger {
+    //             display: none;
+    //         }
+    //         &-burgerOpen {
+    //             display: none;
+    //         }
+    //         .header-title {
+    //             position: relative;
+    //             // top: -45px;
+    //             top: -25px;
+    //             &-logo {
+    //                 img {
+    //                     height: 20px;
+    //                 }
+    //             }
+    //         }
+
+    //         .header-container {
+    //             @include row();
+    //             position: relative;
+    //             top: -100px;
+    //             height: 150px;
+    //             &-title {
+    //                 list-style: none;
+    //                 margin: 0 10px;
+    //                 &-btn {
+    //                     background-color: transparent;
+    //                     border: none;
+    //                     padding-right: 25px;
+    //                     position: relative;
+    //                     bottom: -25px;
+    //                     &-txt {
+    //                         @include fontBold();
+    //                         color: $base-color;
+    //                         text-decoration: none;
+    //                         text-align: center;
+    //                     }
+    //                 }
+    //             }
+
+    //             &-title:hover {
+    //                 background-clip: border-box;
+    //                 background-color: $secondary-color;
+    //                 // padding: 70px 0 60px 0;
+    //                 padding: 70px 0 80px 0;
+    //                 border-radius: 0 0 5px 5px;
+    //             }
+
+    //             button {
+    //                 font-size: 12px;
+    //                 margin-left: 30px;
+    //                 position: relative;
+    //                 // top: 50px;
+    //                 top: 70px;
+    //             }
+    //         }
+    //     }
+    // }
 }
 @include breakpoint(laptops) {
     .header-section {
