--- a/src/sass/components/layouts/_searchbar.scss
+++ b/src/sass/components/layouts/_searchbar.scss
@@ -77,6 +77,68 @@
     }
 }
 @include breakpoint(tablet) {
+    // .searchbar {
+    //     width: 100%;
+    //     .searchbar-section {
+    //         padding: 0 10%;
+    //         display: flex;
+    //         flex-direction: row;
+    //         color: $base-color;
+
+    //         &-left {
+    //             width: 90%;
+    //             h1 {
+    //                 font-family: Nunito-Bold;
+    //                 font-size: 28px;
+    //                 margin-bottom: 5px;
+    //             }
+    //             p {
+    //                 font-family: Nunito-Regular;
+    //                 font-size: 16px;
+    //                 margin-bottom: 35px;
+    //             }
+    //             &-form {
+    //                 @include row();
+    //                 // width: 85%;
+    //                 justify-content: space-between;
+    //                 &-set {
+    //                     @include row();
+
+    //                     #outlined-basic {
+    //                         background-color: #384170;
+    //                         border-radius: 3px;
+    //                         // width: 240px;
+    //                         width: 12rem;
+    //                         color: $base-color;
+    //                     }
+
+    //                     #select-basic {
+    //                         background-color: #384170;
+    //                         border-radius: 3px;
+    //                         margin: 0;
+    //                     }
+    //                 }
+    //                 &-btn {
+    //                     z-index: 1;
+    //                     height: 40px;
+    //                 }
+    //             }
+    //         }
+
+    //         &-right {
+    //             &-illustration {
+    //                 display: none;
+    //                 z-index: 0 !important;
+    //                 position: absolute;
+    //                 // width: 40rem;
+    //                 width: 50%;
+    //                 // top: 7em;
+    //                 top: 9em;
+    //                 right: 2em;
+    //             }
+    //         }
+    //     }
+    // }
 }
 
 @include breakpoint(laptops) {
