--- a/src/sass/components/layouts/_footer.scss
+++ b/src/sass/components/layouts/_footer.scss
@@ -12,6 +12,31 @@
             margin-right: 70px;
             a {
                 font-family: Nunito-Regular;
+                font-size: 12px;
+                color: $base-color;
+                text-decoration: none;
+                &:hover {
+                    font-family: Nunito-Bold;
+                }
+            }
+        }
+    }
+}
+
+@mixin perComponentSM {
+    h3 {
+        font-family: Nunito-Bold;
+        color: $base-color;
+        margin-bottom: 15px;
+        font-size: 16px;
+    }
+    ul {
+        li {
+            list-style: none;
+            margin-bottom: 5px;
+            margin-right: 70px;
+            a {
+                font-family: Nunito-Regular;
                 font-size: 14px;
                 color: $base-color;
                 text-decoration: none;
@@ -113,7 +138,102 @@
 }
 @include breakpoint(tablet) {
 }
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+    .footer-section {
+        margin-bottom: -100px;
+        background-image: url(../../../assets/images/footer.png);
+        background-repeat: no-repeat;
+        // background-size: 100% 400px;
+        height: 400px;
+        // padding-top: -200px;
+        width: 100%;
+        .footer-content-top {
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            position: relative;
+            bottom: -110px;
+            padding: 0 10%;
+            .footer-left {
+                &-top {
+                    display: flex;
+                    flex-direction: row;
+                    &-hosting {
+                        @include perComponentSM();
+                    }
+                    &-features {
+                        @include perComponentSM();
+                    }
+                    &-support {
+                        @include perComponentSM();
+                    }
+                }
+            }
+            .footer-right {
+                display: none;
+            }
+        }
 
+        .footer-content-bottom {
+            display: flex;
+            align-items: baseline;
+            justify-content: space-between;
+            position: relative;
+            bottom: -80px;
+            padding: 0 10%;
+            .footer-left-bottom {
+                p {
+                    color: $base-color;
+                    font-family: Nunito-Regular;
+                    font-size: 14px;
+                }
+            }
+            .footer-right-bottom {
+                margin-top: 70px;
+                &-socmed {
+                    display: flex;
+                    flex-direction: column;
+
+                    ul {
+                        display: flex;
+                        justify-content: flex-end;
+                        li {
+                            list-style: none;
+                            margin-left: 10px;
+                            a {
+                                img {
+                                    height: 15px;
+                                }
+                                // :hover {
+                                //     height: 20px;
+                                // }
+                            }
+                        }
+                    }
+                    span {
+                        display: flex;
+                        justify-content: flex-end;
+                        align-items: baseline;
+                        a {
+                            color: $base-color;
+                            font-family: Nunito-Regular;
+                            font-size: 14px;
+                            text-decoration: none;
+                            margin-left: 10px;
+                        }
+                        p {
+                            margin-top: 15px;
+                            margin-left: 10px;
+                            color: $base-color;
+                            font-family: Nunito-Regular;
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 @include breakpoint(laptops) {
     .footer-section {
         margin-bottom: -100px;
