--- a/src/sass/components/layouts/_searchbar.scss
+++ b/src/sass/components/layouts/_searchbar.scss
@@ -34,7 +34,7 @@
                     color: $base-color;
                     font-size: 16px;
                     margin-bottom: 35px;
-                    margin-top: 20px;
+                    margin-top: 10px;
                     text-align: center;
                 }
                 &-form {
@@ -77,68 +77,71 @@
     }
 }
 @include breakpoint(tablet) {
-    // .searchbar {
-    //     width: 100%;
-    //     .searchbar-section {
-    //         padding: 0 10%;
-    //         display: flex;
-    //         flex-direction: row;
-    //         color: $base-color;
+}
 
-    //         &-left {
-    //             width: 90%;
-    //             h1 {
-    //                 font-family: Nunito-Bold;
-    //                 font-size: 28px;
-    //                 margin-bottom: 5px;
-    //             }
-    //             p {
-    //                 font-family: Nunito-Regular;
-    //                 font-size: 16px;
-    //                 margin-bottom: 35px;
-    //             }
-    //             &-form {
-    //                 @include row();
-    //                 // width: 85%;
-    //                 justify-content: space-between;
-    //                 &-set {
-    //                     @include row();
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+    .searchbar {
+        width: 100%;
+        .searchbar-section {
+            padding: 0 10%;
+            display: flex;
+            flex-direction: row;
+            color: $base-color;
 
-    //                     #outlined-basic {
-    //                         background-color: #384170;
-    //                         border-radius: 3px;
-    //                         // width: 240px;
-    //                         width: 12rem;
-    //                         color: $base-color;
-    //                     }
+            &-left {
+                width: 90%;
+                h1 {
+                    font-family: Nunito-Bold;
+                    font-size: 28px;
+                    margin-bottom: 5px;
+                }
+                p {
+                    font-family: Nunito-Regular;
+                    font-size: 16px;
+                    margin-bottom: 35px;
+                }
+                &-form {
+                    @include row();
+                    // width: 85%;
+                    justify-content: space-between;
+                    &-set {
+                        @include row();
 
-    //                     #select-basic {
-    //                         background-color: #384170;
-    //                         border-radius: 3px;
-    //                         margin: 0;
-    //                     }
-    //                 }
-    //                 &-btn {
-    //                     z-index: 1;
-    //                     height: 40px;
-    //                 }
-    //             }
-    //         }
+                        #outlined-basic {
+                            background-color: #384170;
+                            border-radius: 3px;
+                            // width: 240px;
+                            width: 12rem;
+                            color: $base-color;
+                        }
 
-    //         &-right {
-    //             &-illustration {
-    //                 display: none;
-    //                 z-index: 0 !important;
-    //                 position: absolute;
-    //                 // width: 40rem;
-    //                 width: 50%;
-    //                 // top: 7em;
-    //                 top: 9em;
-    //                 right: 2em;
-    //             }
-    //         }
-    //     }
-    // }
+                        #select-basic {
+                            background-color: #384170;
+                            border-radius: 3px;
+                            margin: 0;
+                        }
+                    }
+                    &-btn {
+                        z-index: 1;
+                        height: 40px;
+                    }
+                }
+            }
+
+            &-right {
+                &-illustration {
+                    display: none;
+                    z-index: 0 !important;
+                    position: absolute;
+                    // width: 40rem;
+                    width: 50%;
+                    // top: 7em;
+                    top: 9em;
+                    right: 2em;
+                }
+            }
+        }
+    }
 }
 
 @include breakpoint(laptops) {
