--- a/src/sass/components/pages/home/_our-clients.scss
+++ b/src/sass/components/pages/home/_our-clients.scss
@@ -58,6 +58,42 @@
 }
 @include breakpoint(tablet) {
 }
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+    .ourClients-section {
+        margin: 100px 0;
+        padding: 0 10%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        &-title {
+            align-self: center;
+            h1 {
+                font-family: Nunito-Bold;
+                font-size: 24px;
+                margin-bottom: 5px;
+                text-align: center;
+            }
+            p {
+                font-family: Nunito-Regular;
+                font-size: 16px;
+                text-align: center;
+            }
+        }
+        &-clients {
+            margin: 50px;
+            display: flex;
+            align-self: center;
+            img {
+                height: 25px;
+                padding: 0 20px;
+            }
+        }
+        button {
+            align-self: center;
+            width: 150px;
+        }
+    }
+}
 @include breakpoint(laptops) {
     .ourClients-section {
         margin: 150px 0;
