--- a/src/sass/components/pages/home/_valued-costumer.scss
+++ b/src/sass/components/pages/home/_valued-costumer.scss
@@ -193,88 +193,98 @@
     }
 }
 @include breakpoint(tablet) {
-    // .swiper-container {
-    //     // width: 640px;
-    //     // width: 51rem;
-    //     width: 100%;
-    //     padding-left: 10px;
-    // }
-    // .swiper-slide {
-    //     align-items: flex-start;
-    //     // width: 100%;
-    //     .slide {
-    //         width: 185px;
-    //         border: olive 1px solid;
-    //     }
-    // }
-    // .my-custom-pagination-div {
-    //     margin-top: 50px;
-    // }
+}
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+    .swiper-container {
+        // width: 640px;
+        // width: 51rem;
+        width: 70%;
+        padding-left: 75px;
+    }
+    .swiper-slide {
+        align-items: flex-start;
+        width: 100%;
+        .slide {
+            width: 300px;
+            // border: olive 1px solid;
+        }
+    }
+    .my-custom-pagination-div {
+        margin-top: 50px;
+    }
 
-    // .valuedCostumer-section {
-    //     position: relative;
-    //     display: flex;
-    //     flex-direction: column;
-    //     // height: 40em;
-    //     background-color: $light-secondary-color;
-    //     padding: 8% 10%;
-    //     &-title {
-    //         align-self: center;
-    //         margin-bottom: 50px;
-    //         h1 {
-    //             font-family: Nunito-Bold;
-    //             font-size: 24px;
-    //             margin-bottom: 5px;
-    //             text-align: center;
-    //         }
-    //         p {
-    //             font-family: Nunito-Regular;
-    //             font-size: 16px;
-    //             text-align: center;
-    //         }
-    //     }
-    //     &-dot {
-    //         img {
-    //             height: 100px;
-    //         }
-    //         :nth-child(1) {
-    //             position: absolute;
-    //             top: 500px;
-    //             left: 10px;
-    //         }
-    //         :nth-child(2) {
-    //             position: absolute;
-    //             top: -50px;
-    //             right: 0;
-    //         }
-    //     }
-    //     &-slide {
-    //         // :nth-child(odd) {
-    //         // }
-    //         .slide {
-    //             display: flex;
-    //             flex-direction: column;
-    //             align-items: flex-start;
-    //             font-family: Nunito-Light;
-    //             font-size: 16px;
-    //             &-left {
-    //                 margin-right: 15px;
-    //                 img {
-    //                     height: 100px;
-    //                 }
-    //             }
-    //             &-right {
-    //                 &-stars {
-    //                     padding-top: 15px;
-    //                     margin-bottom: 10px;
-    //                 }
-    //                 p {
-    //                     margin-bottom: 10px;
-    //                 }
-    //             }
-    //         }
-    //     }
-    // }
+    .valuedCostumer-section {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        // height: 40em;
+        background-color: $light-secondary-color;
+        padding: 8% 10%;
+        &-title {
+            align-self: center;
+            margin-bottom: 50px;
+            h1 {
+                font-family: Nunito-Bold;
+                font-size: 24px;
+                margin-bottom: 5px;
+                text-align: center;
+            }
+            p {
+                font-family: Nunito-Regular;
+                font-size: 16px;
+                text-align: center;
+            }
+        }
+        &-dot {
+            img {
+                height: 100px;
+            }
+            :nth-child(1) {
+                position: absolute;
+                top: 500px;
+                left: 10px;
+            }
+            :nth-child(2) {
+                position: absolute;
+                top: -50px;
+                right: 0;
+            }
+        }
+        &-slide {
+            // :nth-child(odd) {
+            // }
+            .slide {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                font-family: Nunito-Light;
+                font-size: 16px;
+                &-left {
+                    margin-right: 15px;
+                    img {
+                        height: 100px;
+                    }
+                }
+                &-right {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    &-stars {
+                        padding-top: 15px;
+                        margin-bottom: 10px;
+                        text-align: center;
+                    }
+                    p {
+                        text-align: center;
+                        margin-bottom: 10px;
+                    }
+                    strong {
+                        text-align: center;
+                    }
+                }
+            }
+        }
+    }
 }
 @include breakpoint(laptops) {
     .swiper-container {
